refactor(docs): update Jekyll build and theme configuration
- Disable bundler cache and add bundle update in CI workflow
- Update Gemfile to remove version constraints on plugins
- Refactor dark theme SCSS, removing import and updating custom colors
- Switch to just-the-docs theme, adjusting import statements in style.scss

--- a/docs/_sass/color_schemes/dark.scss
+++ b/docs/_sass/color_schemes/dark.scss
@@ -1,6 +1,4 @@
-@import "./color_schemes/dark";
-
-// Custom dark theme colors
+// Custom dark theme colors for noidea
 $link-color: #6ab0de;
 $btn-primary-color: #f18e33;
 $code-background-color: #2c3439; 
