refactor(docs): switch to jekyll-theme-midnight
- Update _config.yml to use jekyll-theme-midnight instead of just-the-docs
- Remove dark theme SCSS file and related configurations
- Simplify style.scss to import the new theme and add custom page header styling
- Revise navigation structure in _config.yml to use a new format

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -1,6 +1,8 @@
-@import "just-the-docs/functions";
-@import "just-the-docs/variables";
-@import "just-the-docs/color_schemes/dark";
-@import "just-the-docs/modules";
+@import "{{ site.theme }}";
 
-// Custom styles can be added here 
+// Custom styles
+.page-header {
+  padding: 1rem;
+}
+
+// Add any additional custom styles here 
